Update lesson narrative and solution of a practice

--- a/teachers.qmd
+++ b/teachers.qmd
@@ -49,13 +49,23 @@ library(rayshader)
 
 ### Lesson Narrative
 
-This lesson builds on concepts from previous units and introduces the matrix as a tool for data representation. In grade 7, students learn how to formulate questions, collect data, present it, and analyze it to answer those questions. They also gain experience using bar charts and pie charts for data presentation and interpretation. In this lesson, students extend their understanding by representing real-world data in matrix form and visualizing it through 3D modeling and printing.
+The lessons are based on three key principles: duality, necessity, and repeated reasoning. These principles help connect abstract mathematical ideas, like matrices, to the real world by integrating computational thinking and data visualization.
 
-In Lesson 1, students will learn how to represent real-world data using matrices and interpret the information presented in matrix form. Through this process, they will develop skills in analyzing data representations, identifying key messages, and evaluating the effectiveness and efficiency of different representations. By the end of the lesson, students will have a deeper understanding of how matrices can be used to organize and convey data, and they will be introduced to matrices as a powerful tool for data representation.
+-   Duality focuses on both mastering the subject, like using matrices to represent data, and building computational thinking skills.
 
-In Lesson 2, students will explore how to represent data in a matrix format and transform it into visualizations, including heatmaps and 3D models. They will begin by creating and modifying matrices in R, using heatmaps to uncover patterns and relationships within the data. Building on this, students will analyze different representations—matrices, heatmaps, and 3D visualizations—comparing their strengths and applications. Finally, they will investigate the steps involved in creating 3D models from matrices, connecting abstract data representation to practical and visual outcomes.
+-   Necessity ensures the lessons spark students' curiosity and need to learn matrices in a meaningful way.
 
-In Lesson 3, students will use real-world topographical data to create and print a physical model. They will start by using NASA Earth data to obtain an elevation matrix of a location of their choice. This data will then be modeled into a 3D representation, which students will print using a 3D printer. By the end of the lesson, students will have created a tangible topographical model from real-world elevation data.
+-   Repeated reasoning provides plenty of practice, helping students strengthen their computational thinking skills.
+
+Together, these principles help students bridge the gap between abstract concepts and practical applications, giving them tools to better understand and model the world around them.
+
+These lessons builds on concepts from previous units and introduces the matrix as a tool for data representation. In grade 7, students learn how to formulate questions, collect data, present it, and analyze it to answer those questions. They also gain experience using bar charts and pie charts for data presentation and interpretation. In this lesson, students extend their understanding by representing real-world data in matrix form and visualizing it through 3D modeling and printing.
+
+In Lesson 1, students are introduced to the fundamentals of data visualization and matrix-based analysis. The tasks are carefully sequenced to build their understanding of how abstract data can be represented and interpreted using visual and numerical methods. The lesson begins with students observing and interpreting trends using visualizations, sparking their curiosity about temperature patterns. They then critically evaluate the effectiveness of a line chart, identifying its limitations and exploring improved methods of communication. Moving forward, students analyze heatmaps as an alternative visualization, comparing their effectiveness with line charts and learning to represent data as numerical matrices. Students engage with matrices to extract, interpret, and analyze numerical data, discovering how trends across rows or columns can reveal meaningful insights. To deepen their understanding, they practice summarizing data by reducing a matrix’s dimensionality through the calculation of averages. By the end of this lesson, students no longer see matrices as abstract arrays but as powerful tools for decoding and analyzing real-world data.
+
+In Lesson 2, the foundational concepts of matrices and visualization are expanded through the integration of coding in R, enhancing students’ computational thinking. The tasks guide students to interact with code and matrices to create dynamic visualizations. Students start by exploring how simple R scripts generate heatmaps, learning how data structures relate to their visual representations. This introductory task helps students connect coding basics to data visualization. They then experiment with matrix parameters such as data, number of rows, and ordering methods, gaining hands-on experience in manipulating matrices and observing how changes affect visual outputs. Applying this knowledge, students work with real-world data, such as overlaps in social media platform usage, to create matrices and heatmaps that represent complex relationships. As they advance, students develop customized heatmaps, including a binary chessboard pattern, learning about color palettes and structured matrix designs. Finally, students transition from two-dimensional visualizations to the concept of three-dimensional data representation, exploring how matrix-based data can serve as the foundation for creating 3D models. This progression equips students with a deeper appreciation for the versatility of matrices in representing and visualizing diverse datasets.
+
+Lesson 3 immerses students in the process of transforming elevation data into 3D models, combining data analysis, coding, and hands-on creation. The journey begins with students examining a 3D model of Mount Merapi, reflecting on how its visual representation connects to the underlying matrix-based data. This activity helps them grasp the concept of representing geographic information through three-dimensional visuals. Students then explore Shuttle Radar Topography Mission (SRTM) elevation data, learning about data resolution and tiling while discovering its applications in urban planning and environmental modeling. Using this data, they analyze its structure as a matrix and transform it into a 3D model. This step helps them understand the relationship between numerical matrices and real-world landscapes. To advance their skills, students utilize R packages like rayshader and terra to work with geographic data and create detailed 3D models. They explore how coding allows them to manipulate data and visualize it effectively. The final step in this lesson is a tangible one—students 3D print their Mount Merapi models, experiencing the process of transforming digital data into physical objects. This hands-on conclusion bridges the gap between abstract data analysis and real-world applications, leaving students with a comprehensive understanding of data representation and its transformative potential.
 
 ### Learning Goals
 
@@ -1226,5 +1236,7 @@ This exercise helps us see how abstract data can be turned into meaningful, real
 
     **Solution:**
 
-    Answer may vary.
+    Answer may vary. For example, students living near Lake Toba in North Sumatra might choose to model the lake. A 3D representation of the lake is shown in @fig-3d-model-lake-toba.
+
+    ![3D model of Lake Toba](plot_3d_toba.png){#fig-3d-model-lake-toba}
 ::::::::::::::::::::::::::
